fixed issue caused by nbdifftool

--- a/artist_song.ipynb
+++ b/artist_song.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-which git-nbdifftool   "execution_count": 35,
+   "execution_count": 35,
    "outputs": [
     {
      "name": "stdout",
@@ -480,7 +480,7 @@ which git-nbdifftool   "execution_count": 35,
    "execution_count": 49,
    "outputs": [],
    "source": [
-    "# artist_song.to_json('data/artist_song/artist_song.json')\n",
+    "artist_song.to_json('data/artist_song/artist_song.json')\n",
     "\n",
     "\n"
    ],
