changed naming scheme

--- a/artist_song.ipynb
+++ b/artist_song.ipynb
@@ -72,7 +72,7 @@
    "execution_count": 36,
    "outputs": [],
    "source": [
-    "billboard_top_100 = pd.read_csv('data/billboard/billboard_top_100.csv')"
+    "bb_t100 = pd.read_csv('data/billboard/bb_t100.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "artist_song_pt = pd.pivot_table(billboard_top_100, index=['artist', 'song'],\n",
+    "artist_song_pt = pd.pivot_table(bb_t100, index=['artist', 'song'],\n",
     "                                values=['peak_rank', 'weeks_on_chart', 'id'],\n",
     "                                aggfunc={'peak_rank' : 'min', 'weeks_on_chart' : 'max', 'id' : 'min'})\n",
     "artist_song_pt"
@@ -122,8 +122,8 @@
     }
    ],
    "source": [
-    "print('Unique artist names:', len(billboard_top_100['artist'].unique()))\n",
-    "print('Unique song names:',len(billboard_top_100['song'].unique()))"
+    "print('Unique artist names:', len(bb_t100['artist'].unique()))\n",
+    "print('Unique song names:',len(bb_t100['song'].unique()))"
    ],
    "metadata": {
     "collapsed": false,
