--- a/billboard_weekly_100.ipynb
+++ b/billboard_weekly_100.ipynb
@@ -80,6 +80,7 @@
     }
    ],
    "source": [
+    "#R20-BB\n",
     "top2020 = pd.read_json('data/input/top100.json')\n",
     "top2020.head()"
    ],
@@ -105,6 +106,7 @@
     }
    ],
    "source": [
+    "#G19-BB\n",
     "top2019 = pd.read_csv('data/input/songs-2.csv', index_col=0)\n",
     "top2019.head()"
    ],
@@ -525,8 +527,8 @@
     }
    ],
    "source": [
-    "billboard_top_100 = top2019.merge(top2020, how='outer')\n",
-    "billboard_top_100.shape\n"
+    "bb_t100 = top2019.merge(top2020, how='outer')\n",
+    "bb_t100.shape\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -550,13 +552,13 @@
     }
    ],
    "source": [
-    "billboard_top_100.sort_values(by=['date', 'rank'], inplace=True)\n",
-    "billboard_top_100.reset_index(drop=True, inplace=True)\n",
-    "billboard_top_100['id'] = billboard_top_100.index\n",
+    "bb_t100.sort_values(by=['date', 'rank'], inplace=True)\n",
+    "bb_t100.reset_index(drop=True, inplace=True)\n",
+    "bb_t100['id'] = bb_t100.index\n",
     "\n",
-    "billboard_top_100 = billboard_top_100[['id', 'song', 'artist', 'peak_rank', 'rank_last_week', 'weeks_on_chart',\n",
+    "bb_t100 = bb_t100[['id', 'song', 'artist', 'peak_rank', 'rank_last_week', 'weeks_on_chart',\n",
     "       'rank', 'date']]\n",
-    "billboard_top_100.tail()\n"
+    "bb_t100.tail()\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -580,7 +582,7 @@
     }
    ],
    "source": [
-    "billboard_top_100.loc[(billboard_top_100['date'] == '2019-08-17')].head()"
+    "bb_t100.loc[(bb_t100['date'] == '2019-08-17')].head()"
    ],
    "metadata": {
     "collapsed": false,
@@ -606,7 +608,7 @@
    "source": [
     "# Show Top 5 Songs of July 25, 2020 Chart\n",
     "pd.set_option('display.max_seq_items', None)\n",
-    "lat_table = billboard_top_100.loc[(billboard_top_100['date'] == \"2020-07-25\")].head(5)\n",
+    "lat_table = bb_t100.loc[(bb_t100['date'] == \"2020-07-25\")].head(5)\n",
     "lat_table"
    ],
    "metadata": {
@@ -654,8 +656,7 @@
    "execution_count": 70,
    "outputs": [],
    "source": [
-    "# billboard_top_100.to_csv('data/billboard/billboard_top_100.csv')\n",
-    "# top2020.to_csv('data/billboard/billboard_top_100_2020.csv')"
+    "bb_t100.to_csv('data/billboard/bb_t100.csv')\n"
    ],
    "metadata": {
     "collapsed": false,
