added external progress bar function

--- a/src/notebooks/lyrics_preparation.ipynb
+++ b/src/notebooks/lyrics_preparation.ipynb
@@ -32,26 +32,7 @@
     "        print(os.path.join(dirname, filename))\n",
     "\n",
     "\n",
-    "def printProgressBar (iteration, total, prefix = '', suffix = '', decimals = 1, length = 100, fill = '█', printEnd = \"\\r\"):\n",
-    "    \"\"\"\n",
-    "    Call in a loop to create terminal progress bar\n",
-    "    @params:\n",
-    "        iteration   - Required  : current iteration (Int)\n",
-    "        total       - Required  : total iterations (Int)\n",
-    "        prefix      - Optional  : prefix string (Str)\n",
-    "        suffix      - Optional  : suffix string (Str)\n",
-    "        decimals    - Optional  : positive number of decimals in percent complete (Int)\n",
-    "        length      - Optional  : character length of bar (Int)\n",
-    "        fill        - Optional  : bar fill character (Str)\n",
-    "        printEnd    - Optional  : end character (e.g. \"\\r\", \"\\r\\n\") (Str)\n",
-    "    \"\"\"\n",
-    "    percent = (\"{0:.\" + str(decimals) + \"f}\").format(100 * (iteration / float(total)))\n",
-    "    filledLength = int(length * iteration // total)\n",
-    "    bar = fill * filledLength + '-' * (length - filledLength)\n",
-    "    print(f'\\r{prefix} |{bar}| {percent}% {suffix}', end = printEnd)\n",
-    "    # Print New Line on Complete\n",
-    "    if iteration == total:\n",
-    "        print()"
+    "from src.progress_bar import printProgressBar"
    ],
    "metadata": {
     "collapsed": false,
