changed project sturcture

--- a/src/notebooks/artist_song.ipynb
+++ b/src/notebooks/artist_song.ipynb
@@ -2,36 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data\\artist_song\\artist_song.csv\n",
-      "data\\artist_song\\artist_song.json\n",
-      "data\\billboard\\billboard_top_100.csv\n",
-      "data\\billboard\\billboard_top_100_2020.csv\n",
-      "data\\input\\songs-2.csv\n",
-      "data\\input\\top100.json\n",
-      "data\\input\\top100_old.json\n",
-      "data\\lyrics\\artist_song_lyrics.csv\n",
-      "data\\lyrics\\artist_song_lyrics.xlsx\n",
-      "data\\lyrics\\artist_song_lyrics_bak.csv\n",
-      "data\\lyrics\\artist_song_lyrics_manual.csv\n",
-      "data\\lyrics\\filtered_lyrics.csv\n",
-      "data\\lyrics\\filtered_lyrics.xlsx\n",
-      "data\\lyrics\\filtered_lyrics_bak.csv\n",
-      "data\\lyrics\\filtered_lyrics_bak.xlsx\n",
-      "data\\lyrics\\long_lyrics.csv\n",
-      "data\\lyrics\\long_lyrics.xlsx\n",
-      "data\\lyrics\\lyrics.xlsx\n",
-      "data\\lyrics\\missing_lyrics.csv\n",
-      "data\\lyrics\\missing_lyrics.xlsx\n",
-      "data\\lyrics\\missing_lyrics_bak.csv\n",
-      "data\\lyrics\\missing_lyrics_bak.xlsx\n",
-      "data\\lyrics\\short_lyrics.csv\n",
-      "data\\lyrics\\~$missing_lyrics.xlsx\n"
+      "../../data/billboard/bb-t100.csv\n",
+      "../../data/billboard/billboard_top_100_2020.csv\n",
+      "../../data/billboard/backups/bb-t100_backup.csv\n"
      ]
     }
    ],
@@ -42,9 +21,9 @@
     "import matplotlib.pyplot as plt\n",
     "import datetime\n",
     "import os\n",
-    "for dirname, _, filenames in os.walk('data'):\n",
+    "for dirname, _, filenames in os.walk('../../data/billboard'):\n",
     "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))"
+    "        print(os.path.join(dirname, filename).replace(\"\\\\\",\"/\"))"
    ],
    "metadata": {
     "collapsed": false,
@@ -72,7 +51,7 @@
    "execution_count": 36,
    "outputs": [],
    "source": [
-    "bb_t100 = pd.read_csv('data/billboard/bb_t100.csv')"
+    "bb_t100 = pd.read_csv('../../data/billboard/bb_t100.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -480,7 +459,7 @@
    "execution_count": 49,
    "outputs": [],
    "source": [
-    "artist_song.to_json('data/artist_song/artist_song.json')\n",
+    "artist_song.to_json('../../data/artist_song/artist_song.json')\n",
     "\n",
     "\n"
    ],
