--- a/src/notebooks/billboard_weekly_100.ipynb
+++ b/src/notebooks/billboard_weekly_100.ipynb
@@ -2,35 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data\\artist_song\\artist_song.csv\n",
-      "data\\artist_song\\artist_song.json\n",
-      "data\\billboard\\billboard_top_100.csv\n",
-      "data\\billboard\\billboard_top_100_2020.csv\n",
-      "data\\input\\songs-2.csv\n",
-      "data\\input\\top100.json\n",
-      "data\\input\\top100_old.json\n",
-      "data\\lyrics\\artist_song_lyrics.csv\n",
-      "data\\lyrics\\artist_song_lyrics.xlsx\n",
-      "data\\lyrics\\artist_song_lyrics_bak.csv\n",
-      "data\\lyrics\\artist_song_lyrics_manual.csv\n",
-      "data\\lyrics\\filtered_lyrics.csv\n",
-      "data\\lyrics\\filtered_lyrics.xlsx\n",
-      "data\\lyrics\\filtered_lyrics_bak.csv\n",
-      "data\\lyrics\\filtered_lyrics_bak.xlsx\n",
-      "data\\lyrics\\long_lyrics.csv\n",
-      "data\\lyrics\\long_lyrics.xlsx\n",
-      "data\\lyrics\\lyrics.xlsx\n",
-      "data\\lyrics\\missing_lyrics.csv\n",
-      "data\\lyrics\\missing_lyrics.xlsx\n",
-      "data\\lyrics\\missing_lyrics_bak.csv\n",
-      "data\\lyrics\\missing_lyrics_bak.xlsx\n",
-      "data\\lyrics\\short_lyrics.csv\n"
+      "../../data/input/2019.png\n",
+      "../../data/input/2019.svg\n",
+      "../../data/input/2019_mask.png\n",
+      "../../data/input/2019_mask_2.png\n",
+      "../../data/input/corona-lyrics.xlsx\n",
+      "../../data/input/songs-2.csv\n",
+      "../../data/input/top100.json\n",
+      "../../data/input/top100_old.json\n",
+      "../../data/input/~$corona-lyrics.xlsx\n"
      ]
     }
    ],
@@ -41,9 +27,9 @@
     "import matplotlib.pyplot as plt\n",
     "import datetime\n",
     "import os\n",
-    "for dirname, _, filenames in os.walk('data'):\n",
+    "for dirname, _, filenames in os.walk('../../data/input'):\n",
     "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))"
+    "        print(os.path.join(dirname, filename).replace(\"\\\\\",\"/\"))"
    ],
    "metadata": {
     "collapsed": false,
@@ -81,7 +67,7 @@
    ],
    "source": [
     "#R20-BB\n",
-    "top2020 = pd.read_json('data/input/top100.json')\n",
+    "top2020 = pd.read_json('../../data/input/top100.json')\n",
     "top2020.head()"
    ],
    "metadata": {
@@ -107,7 +93,7 @@
    ],
    "source": [
     "#G19-BB\n",
-    "top2019 = pd.read_csv('data/input/songs-2.csv', index_col=0)\n",
+    "top2019 = pd.read_csv('../../data/input/songs-2.csv', index_col=0)\n",
     "top2019.head()"
    ],
    "metadata": {
@@ -656,7 +642,7 @@
    "execution_count": 70,
    "outputs": [],
    "source": [
-    "bb_t100.to_csv('data/billboard/bb_t100.csv')\n"
+    "bb_t100.to_csv('../../data/billboard/bb_t100.csv')\n"
    ],
    "metadata": {
     "collapsed": false,
