--- a/src/notebooks/billboard_weekly_100.ipynb
+++ b/src/notebooks/billboard_weekly_100.ipynb
@@ -642,7 +642,7 @@
    "execution_count": 70,
    "outputs": [],
    "source": [
-    "bb_t100.to_csv('../../data/billboard/bb_t100.csv')\n"
+    "bb_t100.to_csv('../../data/billboard/billboard.csv')\n"
    ],
    "metadata": {
     "collapsed": false,
