--- a/src/notebooks/data_selection.ipynb
+++ b/src/notebooks/data_selection.ipynb
@@ -30,8 +30,8 @@
     }
    ],
    "source": [
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import numpy as np  # linear algebra\n",
+    "import pandas as pd  # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import datetime\n",
@@ -40,13 +40,13 @@
     "\n",
     "for dirname, _, filenames in os.walk('../../data/lyrics'):\n",
     "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename).replace(\"\\\\\",\"/\"))\n",
+    "        print(os.path.join(dirname, filename).replace(\"\\\\\", \"/\"))\n",
     "\n",
-    "print(50*'-')\n",
+    "print(50 * '-')\n",
     "\n",
     "for dirname, _, filenames in os.walk('../../data/billboard'):\n",
     "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename).replace(\"\\\\\",\"/\"))\n",
+    "        print(os.path.join(dirname, filename).replace(\"\\\\\", \"/\"))\n",
     "\n",
     "\n"
    ]
@@ -93,7 +93,7 @@
    ],
    "source": [
     "bb_t100 = pd.read_csv('../../data/billboard/billboard.csv', index_col=0)\n",
-    "bb_t100.rename(columns={'id' : 'billboard_id'}, inplace=True)\n",
+    "bb_t100.rename(columns={'id': 'billboard_id'}, inplace=True)\n",
     "bb_t100.head()"
    ],
    "metadata": {
@@ -149,8 +149,8 @@
     }
    ],
    "source": [
-    "merge_cols = ['language','language_score','lyrics_id','billboard_id', 'first_appearance',]\n",
-    "bb_t100 = bb_t100.merge(lyrics[merge_cols],how='left', left_on='billboard_id', right_on='billboard_id', copy=False)\n",
+    "merge_cols = ['language', 'language_score', 'lyrics_id', 'billboard_id', 'first_appearance', ]\n",
+    "bb_t100 = bb_t100.merge(lyrics[merge_cols], how='left', left_on='billboard_id', right_on='billboard_id', copy=False)\n",
     "bb_t100 = bb_t100.sort_values(by=['artist', 'song', 'lyrics_id']).interpolate(method='pad')\n",
     "bb_t100['lyrics_id'] = pd.to_numeric(bb_t100['lyrics_id'], downcast='integer')\n",
     "bb_t100['date'] = pd.to_datetime(bb_t100['date'], format='%Y-%m-%d')\n",
@@ -212,7 +212,7 @@
    "source": [
     "bb_t100_new = pd.read_csv('../../data/lyrics/bb-t100-lyrics_new.csv', index_col=0)\n",
     "bb_t100_new.head()\n",
-    "bb_t100_new_lat = bb_t100_new[['lyrics', 'genius_description', 'genius_annotations', 'genius_comments','release_date']]\n",
+    "bb_t100_new_lat = bb_t100_new[['lyrics', 'genius_description', 'genius_annotations', 'genius_comments', 'release_date']]\n",
     "print(bb_t100_new_lat.loc[1183:1183].to_latex())"
    ],
    "metadata": {
@@ -252,9 +252,9 @@
    "formats": "ipynb,auto:light"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-9406e68f",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (chart-lyrics-analysis)"
   },
   "language_info": {
    "codemirror_mode": {
