changed exception clause

--- a/src/notebooks/lyrics_preparation.ipynb
+++ b/src/notebooks/lyrics_preparation.ipynb
@@ -262,7 +262,7 @@
     "try:\n",
     "    languages = pd.read_csv('../../data/cache/lyrics_preparation_language.csv', index_col=0)\n",
     "    scores = pd.read_csv('../../data/cache/lyrics_preparation_language_score.csv', index_col=0)\n",
-    "except:\n",
+    "except FileNotFoundError:\n",
     "    languages = []\n",
     "    scores = []\n",
     "    l = len(lyrics)\n",
